[package]
name = "laso_packet"
version = "0.3.0"
edition = "2021"

[features]
legacy = []
fulltest = []

[dependencies]
crc = "3.2"
heapless = "0.8"
ignore-result = "0.2.0"
ufmt = "0.2.0"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
assert_hex = "0.2.2"
bitvec = { version = "1", default-features = false }
futures-lite = "2.6"
